README and related updates.
Updated dev version to RC2, added appveyor badge, dropped
section on .sbtignore since I'm not actually using it.